pkg json  update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-react-typescript-starter",
-  "homepage": "https://lucasmarujo.github.io/portfolio",
+  "homepage": "https://lucasmarujo.github.io/portfolio-final/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
